[tool.poetry]
name = "data-utils"
version = "0.1.0"
description = ""
authors = ["Salman Azhar <azhar.salmaan@gmail.com>"]
readme = "README.md"
packages = [{include = "data_utils"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

